--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,79 @@
-# =============================================================================
-# DEPRECATION WARNING:
-#
-# The file `requirements.txt` does not influence the package dependencies and
-# will not be automatically created in the next version of PyScaffold (v4.x).
-#
-# Please have look at the docs for better alternatives
-# (`Dependency Management` section).
-# =============================================================================
-#
-# Add your pinned requirements so that they can be easily installed with:
-# pip install -r requirements.txt
-# Remember to also add them in setup.cfg but unpinned.
-# Example:
-# numpy==1.13.3
-# scipy==1.0
-#
+apt-xapian-index==0.49
+asn1crypto==0.24.0
+bleach==3.1.0
+blinker==1.4
+certifi==2018.8.24
+chardet==3.0.4
+command-not-found==0.3
+cryptography==2.6.1
+cupshelpers==1.0
+cycler==0.10.0
+dbus-python==1.2.12
+distro==1.3.0
+distro-info===0.21ubuntu4
+docutils==0.15.2
+entrypoints==0.3
+galternatives==1.0.5
+httplib2==0.11.3
+idna==2.6
+importlib-metadata==1.2.0
+joblib==0.14.1
+keyring==18.0.1
+keyrings.alt==3.1.1
+kiwisolver==1.1.0
+language-selector==0.1
+launchpadlib==1.10.7
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+matplotlib==3.1.2
+more-itertools==8.0.2
+netifaces==0.10.4
+numpy==1.17.4
+oauthlib==2.1.0
+olefile==0.46
+pandas==0.25.3
+pexpect==4.6.0
+Pillow==6.1.0
+pkginfo==1.5.0.1
+pycairo==1.16.2
+pycrypto==2.6.1
+pycups==1.9.73
+Pygments==2.5.2
+PyGObject==3.34.0
+PyJWT==1.7.0
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyparsing==2.4.5
+PyQt5==5.12.3
+python-apt==1.9.0+ubuntu1
+python-dateutil==2.8.1
+python-debian==0.1.36
+pytz==2019.3
+pyxdg==0.25
+PyYAML==5.1.2
+readme-renderer==24.0
+reportlab==3.5.23
+requests==2.21.0
+requests-toolbelt==0.9.1
+requests-unixsocket==0.1.5
+scikit-learn==0.22
+scipy==1.3.3
+SecretStorage==2.3.1
+simplejson==3.16.0
+sip==4.19.18
+six==1.12.0
+sklearn==0.0
+systemd-python==234
+tqdm==4.40.2
+twine==3.1.1
+ubuntu-advantage-tools==19.5
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.24.1
+usb-creator==0.3.7
+virtualenv==15.1.0
+wadllib==1.3.3
+webencodings==0.5.1
+xkit==0.0.0
+zipp==0.6.0
